! Fixed posts getting wrong padding in non-Weaving skins. Can't believe no one reported that one... ;) (Wine/sections.css) * Tweaked post backgrounds in Warm. Hmm, it's still no good at all. Warm is a skin that has the potential to be fantastic, but is hurt by my current lack of inspiration regarding non-pastel color palettes. Whatever. Also fixed sidebar's top padding, which was definitely too small. (Warm/index.css) + Replaced existing footer logos with two new logos that seem to prove popular. Also simplified footer CSS and removed two other recent logos which are unlikely to be used again. (webelow.png, webelowine.png, wedgetop.png, wedgebot.png, index.css, Wine/index.css, Warm/index.css, Wuthering/index.css) * Tweaked styling for category headers in Weaving. I guess you can say I chickened out and decided to go for a more 'classical' styling. It still looks great though... Also commenazi. (index.css, sections.css)

--- a/Themes/default/skins/Wine/Warm/index.css
+++ b/Themes/default/skins/Wine/Warm/index.css
@@ -41,7 +41,7 @@ em
 	header
 		color: #744
 	.column
-		padding: 5px 25px 10px 15px
+		padding: 20px 25px 10px 15px
 	#responsive &
 		background-color: #f6f8ef
 
@@ -88,10 +88,8 @@ em
 	border-top: 5px solid average($footer_bg, $body_bg)
 	background: $footer_bg
 	color: #333
-	ul
-		padding: 0
-		li a
-			color: #679
+	ul li a
+		color: #679
 
 #sidebar ul
 	list-style-type: none
@@ -177,10 +175,10 @@ tr.titlebg th, tr.catbg th
 	padding: 0 6px
 
 .windowbg
-	background: #efebe2
+	background: #e7eaef
 
 .windowbg2
-	background: #e8f1f0
+	background: #f0f4f7
 
 .windowbg3
 	background: rgba(50%, 75%, 50%, .1) // #cacdd3
@@ -260,5 +258,5 @@ $ita_font = "Segoe UI", "Trebuchet MS", Arial, sans-serif
 $post_font = 9.5pt/140% "Lucida Sans Unicode", Verdana, $main_font
 
 @replace
-	url($images/minilogow.png)
-	url($images/minilogo.png)
+	webelowine.png
+	webelow.png
