--- a/Themes/default/skins/Wine/sections.css
+++ b/Themes/default/skins/Wine/sections.css
@@ -46,9 +46,12 @@ section.ic
 /* Post styling (still in the Display template)
 ---------------------------------------------------- */
 
-// Alternating backgrounds for posts, and several other sections of the forum.
+// Alternating backgrounds for posts
 .postbg extends .wrc
+	padding: 0
+
 .postbg2 extends .wrc
+	padding: 0
 	background: transparent
 
 // Poster details and list of items
